Removed pie chart height style -- was causing alignment issues in larger viewports

--- a/public/stylesheets/src/_category.css
+++ b/public/stylesheets/src/_category.css
@@ -292,13 +292,6 @@
     }
   }
 
-  .pieChart {
-    canvas {
-      width: auto !important;
-      height: 85vh !important;
-    }
-  }
-
   canvas {
     margin: 0 auto;
     width: 100% !important;
